--- a/app/components/style.css
+++ b/app/components/style.css
@@ -3,6 +3,8 @@ body, html {
   padding: 0px;
   font-family: Roboto, sans-serif;
   overflow: hidden;
+  height: 100%;
+  width: 100%;
 }
 
 .smallCol {
@@ -39,9 +41,31 @@ body, html {
 }
 
 .logViewer {
-  height: 400px;
-  position: absolute;
   background-color: #333;
   bottom: 0;
   width: 100%;
+  flex: 0 1 400px;
+}
+
+#app {
+  width: 100%;
+  height: 100%;
+}
+
+.fullContainer {
+  display: flex;
+  flex-flow: column;
+  height: 100%;
+}
+
+.newButton {
+  position: absolute;
+  bottom: 15px;
+  right: 15px;
+}
+
+.topContainer {
+  width: 100%;
+  position: relative;
+  flex: 1 1 auto;
 }
