--- a/app/components/style.css
+++ b/app/components/style.css
@@ -28,7 +28,7 @@ body, html {
   background-color: #333;
   color: #DDD;
   padding: 20px;
-  height: calc(100% - 88px);
+  height: 322px;
   overflow-y: auto;
   font-size: 13px;
   font-family: "Courier New", Courier, monospace;
