--- a/app/components/style.css
+++ b/app/components/style.css
@@ -32,6 +32,7 @@ body, html {
   overflow-y: auto;
   font-size: 13px;
   font-family: "Courier New", Courier, monospace;
+  white-space: pre-wrap;
 }
 
 .logHeader {
