--- a/app/components/style.css
+++ b/app/components/style.css
@@ -79,9 +79,9 @@ body, html {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #AAA;
+  color: #999;
   font-size:22px;
-  background-color: #444;
+  background-color: #DDD;
 }
 
 .logo {
@@ -89,4 +89,32 @@ body, html {
   width: 400px;
   opacity: 0.24;
   margin: auto;
+}
+
+.splash {
+  background-color: #333;
+  z-index: 1200;
+  top: 0px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+}
+
+.splash img {
+  opacity: 0.75;
+  width: 50%;
+  margin: auto;
+}
+
+.splash-visible {
+  visibility: visible;
+  opacity: 1;
+  transition: opacity 1s linear;
+}
+
+.splash-hidden {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s 1s, opacity 1s linear;
 }
